# OrdonaPluginTemplate

./: build.bat  build.sh  meson.build
include/: plugin.h
src/: main.cpp
